# apps.chansoo

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  dump.rdb  pyproject.toml  requirements.txt  sendgrid.env  tree.txt
apps/: __init__.py  _celery.py  tree.md  urls.py  wsgi.py
apps/apps/: _celery.py  asgi.py  routing.py  urls.py  views.py  wsgi.py
apps/apps/settings/: dev.py  prod.py
apps/centraljersey/: apps.py  urls.py  views.py
apps/settings/: dev.py  prod.py
apps/static/css/: leaflet.css  themind-reset.css  themind.css  tscoop-unsubscribe.css  tscoop.css  tscoop_story.css
apps/static/js/: leaflet.js  (+1 more)
apps/tailorscoop/: admin.py  apps.py  forms.py  models.py  tasks.py  urls.py  views.py
apps/templates/: demo.html
apps/themind/: admin.py  apps.py  consumers.py  models.py  routing.py  urls.py  views.py
apps/twilioapp/: __init__.py  admin.py  models.py  tasks.py  views.py
centraljersey/: cache.py  merge.py
centraljersey/load/: census.py  dialects.py  foursquare.py  njdotcom.py
docs/: celery-redis.md  encrypt.md  letsencrypt-nginx.md  mysql.md
jerseyproj/: manage.py  settings.py  urls.py  wsgi.py
jerseyproj/jerseyproj/: settings.py
jerseyproj/mapapp/: urls.py  views.py
jerseyproj/settings/: __init__.py  base.py  dev.py  prod.py
jerseyproj/twilioapp/: views.py
scripts/: census.py  dunkin.py  folium_map.py  folium_map_tracts.py  merge.py  wawa.py
scripts/census_variables/: variables.py
src/: config.py  merge.py
src/load/: census.py  dialects.py  foursquare.py
src/remindme/: calendar.py  gpt.py  sms.py
(+31 files in other folders)
