[tool.poetry]
name = "apps"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.1.5"
ipykernel = "^6.20.2"
PyYAML = "^6.0"
pandas = "^1.5.3"
geopandas = "^0.12.2"
folium = "^0.14.0"
censusdata = "^1.15.post1"
tqdm = "^4.64.1"
lxml = "^4.9.2"
scikit-learn = "^1.2.1"
seaborn = "^0.12.2"
django-configuration = "^0.0.3"
tabula-py = "^2.6.0"
twilio = "^8.0.0"
openai = "^0.27.4"
google-api-python-client = "^2.85.0"
google-auth-httplib2 = "^0.1.0"
google-auth-oauthlib = "^1.0.0"
celery = {extras = ["redis"], version = "^5.2.7"}
flower = "^1.2.0"
django-extensions = "^3.2.1"
mysqlclient = "^2.1.1"
sendgrid = "^6.10.0"
remindme = {path = "../remindme", develop = true}
tailoredscoop = {path = "../tailoredscoop", develop = true}
ipython = "8.12"

[tool.poetry.dev-dependencies]
ipykernel = "^6.20.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
